--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -14,5 +14,7 @@ jobs:
           run: ls -ltra
 
         - name: Executing Shell Script
-          run: ./ascii-scripts.sh
+          run: |
+            chmod +x ascii-scripts.sh
+            ./ascii-scripts.sh
 
